@@ -9,3 +9,4 @@ pg_createcluster usr/bin
 pg_dropcluster usr/bin
 pg_ctlcluster usr/bin
 pg_upgradecluster usr/bin
+pg_maintenance usr/sbin
