@@ -2,10 +2,12 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 
 POD2MAN=pod2man --center "Debian PostgreSQL infrastructure" -r "Debian"
-PODPROGS=pg_ctlcluster pg_wrapper pg_lsclusters pg_createcluster pg_dropcluster pg_upgradecluster
+POD1PROGS=pg_ctlcluster pg_wrapper pg_lsclusters pg_createcluster pg_dropcluster pg_upgradecluster
+POD8PROGS=pg_maintenance
 
 build/postgresql-common::
-	for p in $(PODPROGS); do $(POD2MAN) $$p > $$p.1; done
+	for p in $(POD1PROGS); do $(POD2MAN) --section 1 $$p > $$p.1; done
+	for p in $(POD8PROGS); do $(POD2MAN) --section 8 $$p > $$p.8; done
 
 cleanbuilddir/postgresql-common::
 	for p in $(PODPROGS); do rm -f $$p.1; done
